[gd_scene load_steps=13 format=3 uid="uid://bqn0bm5d0huao"]

[ext_resource type="Texture2D" uid="uid://bonvo2qe2r0me" path="res://scenes/player/player_normal.png" id="1_3w2ol"]
[ext_resource type="Texture2D" uid="uid://cl0opqxocs3a3" path="res://scenes/buttons/buttons_diffuse.png" id="1_ttrpq"]
[ext_resource type="Script" path="res://scenes/buttons/button.gd" id="1_vb0yn"]
[ext_resource type="AudioStream" uid="uid://bdew2fvtiddu3" path="res://scenes/buttons/sfx1.ogg" id="4_w0fh7"]
[ext_resource type="AudioStream" uid="uid://b8jpkq2g16oe6" path="res://scenes/buttons/sfx2.ogg" id="5_vgcd4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3rykf"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_hljtn"]
offsets = PackedFloat32Array(0, 0.415584)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n48ok"]
gradient = SubResource("Gradient_hljtn")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CanvasTexture" id="CanvasTexture_naiwo"]
diffuse_texture = ExtResource("1_ttrpq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y27fg"]
size = Vector2(18, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fep4f"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_th80e"]
size = Vector2(12, 8)

[node name="Button" type="Node2D"]
script = ExtResource("1_vb0yn")

[node name="Glow" type="Sprite2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
material = SubResource("CanvasItemMaterial_3rykf")
position = Vector2(0, -8)
texture = SubResource("GradientTexture2D_n48ok")

[node name="ClipArea" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(0, -9)
texture = ExtResource("1_3w2ol")

[node name="ButtonTexture" type="Sprite2D" parent="ClipArea"]
position = Vector2(0, 4)
texture = SubResource("CanvasTexture_naiwo")
region_enabled = true
region_rect = Rect2(0, 4, 12, 10)

[node name="BaseTexture" type="Sprite2D" parent="ClipArea"]
position = Vector2(0, 7)
texture = SubResource("CanvasTexture_naiwo")
region_enabled = true
region_rect = Rect2(0, 0, 20, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_y27fg")

[node name="ButtonPressTest" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonPressTest"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_fep4f")
debug_color = Color(0.71909, 0.25113, 1, 0.42)

[node name="MovingCollider" type="AnimatableBody2D" parent="."]
collision_mask = 0

[node name="ButtonMov" type="RemoteTransform2D" parent="MovingCollider"]
position = Vector2(0, -5)
remote_path = NodePath("../../ClipArea/ButtonTexture")

[node name="ButtonShape" type="CollisionShape2D" parent="MovingCollider"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_th80e")

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w0fh7")

[node name="Release" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vgcd4")
